# gpui_router

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROUTER_ROADMAP.md
.claude/: settings.local.json
.claude/memory/: gpui_app_pattern.md
.github/workflows/: ci.yml
examples/: error_demo.rs  nested_demo.rs  transition_demo.rs
src/: cache.rs  context.rs  error.rs  guards.rs  history.rs  lib.rs  lifecycle.rs  logging.rs  matcher.rs  middleware.rs  nested.rs  nested_old.rs  params.rs  route.rs  state.rs  transition.rs  widgets.rs
tests/: integration_tests.rs
